--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 苏南生
 
 name: 苏南生的博客
 description:   A Oracle EBS Technology
-url: https://blog.sunansheng.com
+url: http://blog.sunansheng.com
 
 # 自定义post url
 permalink: /article/:title.html
